# talk-scriber

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
talk_scriber/: __init__.py  main.py
